升级代码优化